--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,12 @@ list-style: none;
 border: none;
 font-family: var(--font-family-type);
 color:var(--white-color);}
-
+.on{
+    display: block;
+}
+.d-none{
+    display: none;
+}
  /*header*/
 header{background-color: var(--blue-color);
     width: 100%;
@@ -35,6 +40,7 @@ position: relative;}
 
 
 /*main*/
+
 .main__section{
     background-color:var(--grey-color);
     width: 100%;
@@ -52,7 +58,7 @@ position: relative;}
 .main__h2{
     color: var(--blue-color);
     text-align: center;
-    font-size: 2rem;
+    font-size: 2rem ;
     margin:5%;
     text-transform: uppercase;
 }
@@ -68,6 +74,7 @@ position: relative;}
     margin-top: 20px;
 }
 /*aside*/
+/*general*/
 aside{background-color:var(--aside-color); 
     width: 260px;
     height: 100%;
@@ -89,68 +96,59 @@ margin-bottom: 5%;
     background-color: transparent;
 }
 .aside__button--x i{color: var(--white-color);
-font-size: 1rem;}
-
-.aside__box{background-color:var(--button-aside-color);
-    width:100%;
-padding: 0% 2%;
 font-size: 1rem;
-text-transform: capitalize;}
-
+}
 .aside__h3{
     text-align: center;
-    margin: 10%;}
-
+    margin: 10%;
+}
 .aside__div{
-margin: 3px;
-width: 100%;
-font-size: 1rem;
+    margin: 3px;
+    width: 100%;
+    font-size: 1rem;
 }
 .aside__h4{
     margin-bottom: 5px;
 }
+.aside__box{background-color:var(--button-aside-color);
+    width:100%;
+    margin:2px;
+padding: 0% 2%;
+font-size: 1rem;
+text-transform: capitalize;}
+/*aside type image*/
 
-.out__text{
-    font-size: 0.7rem;    
-}
-/*input[type='range'],
-input[type='range']::-webkit-slider-runnable-track,
-input[type='range']::-webkit-slider-thumb {
-  -webkit-appearance: none;
+input[type=range]{
+    -webkit-appearance: none;
 }
 
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 5px;
+    background-color:var(--button-aside-color);
+    border: none;
+    border-radius: 3px;
+}
 
 input[type=range]::-webkit-slider-thumb {
-    background-color: #f6f5f5;
-    width: 20px;
-    height: 20px;
-    border: 3px solid #333;
-    border-radius: 50%;
-    margin-top: -9px;
-  }
-  
-  input[type=range]::-moz-range-thumb {
-    background-color: #777;
-    width: 15px;
+    -webkit-appearance: none;
+    border: none;
     height: 15px;
-    border: 3px solid #333;
+    width: 15px;
     border-radius: 50%;
-  }
-  
-  input[type=range]::-ms-thumb {
-    background-color: #777;
-    width: 20px;
-    height: 20px;
-    border: 3px solid #333;
-    border-radius: 50%;
-  }
-  
-  input[type=range]::-webkit-slider-runnable-track {
-    background-color: #777;
-    height: 3px;
-  }
-*/
-.aside__color{
+    background-color:var(--white-color);
+    margin-top: -5px;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background-color: #c9c1c1;
+}
+
+/*aside type text*/
+.aside__radio{
+    font-size: 0.7rem;    
+}
+.aside__input--color{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -162,7 +160,7 @@ width: 45%;
 padding: 3%;
 }
 
-.aside__filtro{width: 80%;
+.aside__filter{width: 80%;
     margin-top: 6%;   
 }
 
@@ -171,7 +169,7 @@ padding: 3%;
     background-color: var(--button-aside-color);
     color:var(--white-color)}
 
-.aside__div--style{
+.aside__div--button{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
