--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ position: relative;}
     font-size: 1rem;
     background-color: transparent;
     text-transform: capitalize;
+    
 }
 
 
@@ -71,6 +72,7 @@ position: relative;}
 .main__button{
     background-color: #008000;
     padding: 1%;
+    mix-blend-mode: lighten;
     margin-top: 20px;
 }
 /*aside*/
