--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 --aside-color: #252935;
 --font-family-type:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif }
 
-/*body.light-theme {
+.light-theme {
     --color-header: #e0e0e0;
     --color-background: #eeeeee;
     --color-panel: #fafafa;
@@ -17,7 +17,7 @@
     --color-title-control: rgb(33 33 33 / 70%);
     --font-primary: 'Open Sans', sans-serif;
     --border-radius: 3px;
-}*/
+}
 *{margin: 0%;
 padding: 0%;
 box-sizing: border-box;
@@ -26,6 +26,7 @@ list-style: none;
 border: none;
 font-family: var(--font-family-type);
 color:var(--white-color);}
+
 .on{
     display: block;
 }
@@ -35,9 +36,9 @@ color:var(--white-color);}
  /*header*/
 header{background-color: var(--blue-color);
     width: 100%;
-height: 120px;
-text-align: center;
-position: relative;}
+    height: 120px;
+    text-align: center;
+    position: relative;}
 
 .header__h1{text-transform: capitalize;
     padding: 1%;
@@ -76,7 +77,6 @@ position: relative;}
     color: var(--blue-color);
     text-align: center;
     font-size: 2rem ;
-    /*position: absolute;*/
     padding: 35px 50px;
     text-transform: uppercase;
     ;
@@ -107,21 +107,23 @@ position: relative;}
 /*general*/
 aside{background-color:var(--aside-color); 
     width: 260px;
-    overflow: auto;
+    height: 100%;
     position: fixed;
+    overflow-y: scroll;
     top: 0;
     right: 0;
     z-index: 10;
     text-transform: uppercase;
 }
-.aside__section{padding: 5%;
-margin-bottom: 5%;    
+.aside__section{padding: 30% 5%;
+margin-bottom: 20%;    
+
 }
 
 .aside__button--x{position: fixed;
     top: 0px;
     right: 0px;
-    margin: 1%;
+    margin: 3%;
     background-color: transparent;
 }
 .aside__button--x i{color: var(--white-color);
@@ -206,6 +208,7 @@ padding: 3%;
 }
 
 .aside__button{padding: 5%;
+    margin-top: 3%;
     text-transform: capitalize;
     background-color: var(--button-aside-color);
     color:var(--white-color)}
@@ -236,11 +239,6 @@ align-items: center;}
 
 /*Media queris*/
 
-/*Monitors 1280
-@media(max-width:1280px){
-
-}*/
-
 /*tablets*/
 @media(max-width: 681px){
     .main__div--black{
@@ -250,6 +248,9 @@ align-items: center;}
     .main__div--center{
         width: 460px;
         transition: all 0.3s linear 0s;
+    }
+    aside{
+        width: 100%;
     }
 }
 
