--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,9 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 
 /*tablets*/
 @media(max-width: 681px){
+    *{
+        max-width: 100%;
+    }
     #div__mi--meme{
         display: flex;
         justify-content: center;
@@ -275,6 +278,7 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 
 /*smalls smarthphones*/
 @media (max-width: 480px){
+    
     .main__tittle {
         width: 300px;
         height: auto;
